--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
-<!doctype html>
-<html class="no-js" lang="">
+<!DOCTYPE html>
+<html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Okten JavaScript Exam</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
+  <body>
+    <div class="container">
+      <h1>Test</h1>
 
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+      <!-- Блок Name/Value Pair -->
+      <div class="pair-section">
+        <label for="input">Name/Value Pair</label>
+        <div class="form-group">
+          <input type="text" id="input" placeholder="Name=Value">
+          <button onclick="add()">Add</button>
+        </div>
+      </div>
 
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
-</head>
+      <!-- Блок Name/Value Pair List -->
+      <div class="list-section">
+        <label for="list">Name/Value Pair List</label>
+        <div class="list-container">
+          <textarea id="list" readonly></textarea>
+          <div class="button-group">
+            <button onclick="sort('name')">Sort by Name</button>
+            <button onclick="sort('value')">Sort by Value</button>
+            <button onclick="del()">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<body>
+    <script src="js/script.js"></script>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
-
-</body>
+  </body>
 
 </html>
